--- a/src/telas/ifrCadastroDepartamento.form
+++ b/src/telas/ifrCadastroDepartamento.form
@@ -64,9 +64,7 @@
                                   <Component id="txtNome1" min="-2" pref="442" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="327" max="-2" attributes="0"/>
-                                  <Component id="btnFechar" min="-2" pref="81" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="418" max="-2" attributes="0"/>
                                   <Component id="btnSalvar" min="-2" pref="80" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -99,11 +97,8 @@
                           <Component id="jLabel13" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtStatus2" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="145" max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="btnFechar" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
-                          <Component id="btnSalvar" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
-                      </Group>
+                      <EmptySpace pref="149" max="32767" attributes="0"/>
+                      <Component id="btnSalvar" min="-2" pref="42" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -139,14 +134,6 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JFormattedTextField" name="txtStatus2">
-            </Component>
-            <Component class="botao.BotaoFechar" name="btnFechar">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Fechar"/>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Tahoma" size="14" style="0"/>
-                </Property>
-              </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="btnSalvar">
               <Properties>
@@ -316,15 +303,13 @@
                               <Component id="txtNome2" min="-2" pref="442" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="327" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <Component id="btnFechar1" min="-2" pref="81" max="-2" attributes="0"/>
-                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Component id="btnSalvar1" min="-2" pref="80" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Component id="chbAtivo" alignment="1" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                              <EmptySpace min="-2" pref="401" max="-2" attributes="0"/>
+                              <Component id="chbAtivo" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="btnFechar3" min="-2" pref="80" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="btnSalvar1" min="-2" pref="80" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace pref="53" max="32767" attributes="0"/>
@@ -351,10 +336,10 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="chbAtivo" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="104" max="32767" attributes="0"/>
+                      <EmptySpace pref="108" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="btnFechar1" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
                           <Component id="btnSalvar1" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
+                          <Component id="btnFechar3" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -392,14 +377,6 @@
             </Component>
             <Component class="javax.swing.JFormattedTextField" name="txtStatus4">
             </Component>
-            <Component class="botao.BotaoFechar" name="btnFechar1">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Fechar"/>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Tahoma" size="14" style="0"/>
-                </Property>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JButton" name="btnSalvar1">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -412,6 +389,17 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cadastro Ativo"/>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="btnFechar3">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Tahoma" size="14" style="0"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Fechar"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFechar3ActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
